static/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');

html {
    font-size: 62.5%;
    scroll-behavior: smooth;
    min-height: 100vh;
}

body {
    font-weight: 400;
    font-size: 1.6rem;
    font-family: Ubuntu, Arial, serif;
    background: linear-gradient(to right top, #ffffff, #efeff0, #dfe0e1, #d0d0d2, #c0c1c3, #abacae, #97989a, #838486, #666768, #4b4b4c, #313131, #191919);
    background-image: url('../images/main-background.png');
    height: 100vh;
    background-repeat: no-repeat;
    background-position: top center;
    background-attachment: fixed;
}

/* Components */
/* ---- Navigation */

.navbar-brand {
    font-size: 2rem;
    padding-left: 1rem;
}

.navbar-dark .navbar-toggler {
    color: #ffffff;
    border-color: #8C8C8C;
    font-size: 2rem;
}

.navbar-dark .navbar-nav .nav-link {
    color: #ffffff;
}

.navbar-nav {
    text-align: right;
}

.navbar-color {
    background-color: #191919;
    color: #ffffff;
}

/* ---- Flashbox */

.flash-box {
    height: 7rem;
    padding-top: 1.5rem;
}

.flash-message {
    color: #FFFFFF;
    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.75);
    font-size: 2.5rem;
}

.home-title {
    padding-bottom: 2rem;
    font-size: 3rem;
}

/* ---- Buttons */

.btn-main {
    font-size: 1.75rem;
    border: 1px solid #191919;
    align-self: center;
    margin: 1rem;
    width: 100%;
    height: 5rem;
    padding: 1rem 0 0 0;
}

.select-btn {
    background-color: #718161;
}
.select-btn:hover {
    background-color: #375412;
}

.search-btn {
    margin: 0;
    width: 75%;
    height: 5rem;
    padding: 0;
}

.edit-btn {
    background-color: #D5D6D8;
}
.edit-btn:hover {
    background-color: #8C8C8C;
}

.delete-btn {
    background-color: #D9351C;
}
.delete-btn:hover {
    background-color: #97271B;
}

/* ---- Form elements */

.form-control {
    font-size: 2rem;
}
.form-control:focus::-webkit-input-placeholder  {
    color:transparent;
}
.form-control:focus::-moz-placeholder   {
    color:transparent;
}
.form-control:-moz-placeholder   {
    color:transparent;
}

.form-select {
    font-size: 2rem;
}

.is-public-switch[type=checkbox]:checked {
    background-color: #375412;
    border-color: #375412;
}

.form-switch .form-check-input {
    width: 3.5rem;
    height: 2rem;
}

/* ---- */

.image {
    height: 25rem;
    width: 100%rem;
}

.line-bottom {
    border-bottom: 1px solid black;
    padding: 10px 0;
    margin: 2px 0;
}

.image-container {
    position: relative;
    overflow: hidden;
    height: 20rem;
}

.recipe-image {
    position: absolute;
    left: -1000%;
    right: -1000%;
    top: -1000%;
    bottom: -1000%;
    margin: auto;
    min-height: 100%;
    min-width: 100%;
    padding: 2rem;
}

/* ---- Cards */

.card {
    margin-bottom: 1rem;
    background: rgba(255, 255, 255, 0.80);
    font-size: 1.75rem;
}

.card-title {
    margin-bottom: 1.5rem;
}

.card-body {
    padding: 1.5rem;
}

.dashboard-card {
    height: 60vh;
    width: 60vw;
}

